--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@vercel/speed-insights": "^1.0.9",
     "chart.js": "^4.4.1",
     "flowbite": "^2.2.1",
     "next": "14.1.0",
