--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.1.0",
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
